--- a/luasrc/view/themes/neobird/header.htm
+++ b/luasrc/view/themes/neobird/header.htm
@@ -152,6 +152,7 @@
 
 <header>
 
+<!--注释底部导航栏
 <div class="navbar">
   <a href="/cgi-bin/luci/admin/status/overview"><img src="<%=media%>/images/home.png" /></a>
   <a href="/cgi-bin/luci/admin/services/shadowsocksr"><img src="<%=media%>/images/ssr.png" /></a>
@@ -159,6 +160,7 @@
   <a href="/cgi-bin/luci/admin/status/realtime"><img src="<%=media%>/images/rank.png" /></a>
   <a href="/cgi-bin/luci/admin/system/admin"><img src="<%=media%>/images/user.png" /></a>
 </div>
+-->
 
 <div class="container">
 <span class="showSide"></span>
