--- a/htdocs/luci-static/neobird/css/style.css
+++ b/htdocs/luci-static/neobird/css/style.css
@@ -574,7 +574,7 @@ img[src*="/luci-static/resources/cbi/reload.gif"] {
     padding: 8px 0;
     width: 20%;
     text-decoration: none;
-    max-width: 100px;
+    /*max-width: 100px;*/
 }
 
 .cbi-map {
@@ -2049,10 +2049,10 @@ header > .container > .pull-right > * {
 }
 
 .node-system-packages > .main .cbi-value > pre {
-    background-color: var(--inputbgColor);
+    /* background-color: var(--inputbgColor); */
     padding: 10px;
     overflow: auto;
-    border: var(--inputBorder);
+    /* border: var(--inputBorder); */
     border-radius: 10px;
 }
 
@@ -2517,7 +2517,8 @@ body.lang_pl.node-main-login .cbi-value-title {
 
     select,
     input {
-        /* max-width: 200px; */
+        /* 
+	    : 200px; */
     }
 
     input[type='checkbox'] {
